# spliit-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLI_USAGE.md  Dockerfile  README.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_eval.py  bot.py  cli.py  config.py  constants.py  domain.py  fly.toml  groups.json  handlers.py  health_http.py  helpers.py  instarem-0-transactions.md  instarem-1-transactions.md  instarem-2-transactions.md  justfile  log  main.py  parsing.py  prompt.txt  pyproject.toml  requirements.txt  services.py  test_bot.py  users.json
.github/workflows/: publish.yml
handlers/: __init__.py  add_flow.py  callbacks.py  commands.py  common.py
