[project]
name = "spliit-telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "httpx==0.27.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "spliit",
]

[tool.uv.sources]
spliit = { git = "https://github.com/guysoft/SpliitApi.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
